--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
                     <div class="footer-col">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> 123 Fashion Avenue, New York</li>
-                            <li><i class="fas fa-phone"></i> (123) 456-7890</li>
-                            <li><i class="fas fa-envelope"></i> info@elegance.com</li>
+                            <li><i class="fas fa-map-marker-alt"></i>THIKA. KENYA </li>
+                            <li><i class="fas fa-phone"></i>+254715598399</li>
+                            <li><i class="fas fa-envelope"></i>masakubandit@gmail.com</li>
                         </ul>
                     </div>
                 </div>
@@ -385,7 +385,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-content">
-                    <p>&copy; 2023 ELEGANCE. All rights reserved.</p>
+                    <p>&copy; 2025 ELEGANCE. All rights reserved.</p>
                     <div class="payment-methods">
                         <i class="fab fa-cc-visa"></i>
                         <i class="fab fa-cc-mastercard"></i>
