--- a/hotpicks.html
+++ b/hotpicks.html
@@ -254,10 +254,30 @@
                         <h3>ELE<span>GANCE</span></h3>
                         <p>Your destination for contemporary fashion that combines elegance with modern trends.</p>
                         <div class="social-icons">
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-pinterest"></i></a>
+                             <a href="https://www.instagram.com/_i.ambrian._?igsh=OTF3N2tvbG13a2Ew" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   aria-label="Visit my Instagram">
+  <i class="fab fa-instagram"></i>
+</a>
+                            <a href="https://www.tiktok.com/@_.iambriann?_t=ZM-8xyhaJTitRF&_r=1" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   aria-label="Follow me on TikTok">
+  <i class="fab fa-tiktok"></i>
+</a>
+                            <a href="https://x.com/iambriann__?t=q80v_LoS6wHYh074tid02A&s=09" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   aria-label="Follow me on X">
+  <i class="fa-solid fa-x"></i>
+</a>
+                           <a href="https://pin.it/2ZeqQLuJA" 
+   target="_blank" 
+   rel="noopener noreferrer"
+   aria-label="Follow me on Pinterest">
+  <i class="fab fa-pinterest"></i>
+</a>
                         </div>
                     </div>
                     
@@ -286,9 +306,9 @@
                     <div class="footer-col">
                         <h4>Contact</h4>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> 123 Fashion Avenue, New York</li>
-                            <li><i class="fas fa-phone"></i> (123) 456-7890</li>
-                            <li><i class="fas fa-envelope"></i> info@elegance.com</li>
+                            <li><i class="fas fa-map-marker-alt"></i> Thika, KIAMBU </li>
+                            <li><i class="fas fa-phone"></i> +254715598399</li>
+                            <li><i class="fas fa-envelope"></i> Masakubandit@gmail.com</li>
                         </ul>
                     </div>
                 </div>
