--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="category-grid">
                 <div class="category-item">
                     <a href="women.html">
-                        <img src="C:\Users\chris\Pictures\Untitled design.png" alt="Women's Fashion" loading="lazy">
+                        <img src=" https://images.unsplash.com/photo-1581044777550-4cfa60707c03?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Women's Fashion" loading="lazy">
                         <div class="category-overlay">
                             <h3>Women</h3>
                             <span class="btn btn-outline">View Collection</span>
